--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Chillsite<\title>
+    <meta name="description" content="My website in which I just do anything here :>">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Chillcraft">
   </head>
   <body>
-    <p>hi</p>
+    <p>hi :3</p>
   </body>
 </html>        
