--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chillsite<\title>
+    <title>Chillsite</title>
     <meta name="description" content="My website in which I just do anything here :>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chillcraft">
