--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="description" content="My website in which I just do anything here :>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chillcraft">
+    
+    <style>
+    #title {
+      font-family: "Brush Script MT", "Lucida Handwriting", Georgia;
+      text-align: center;
+    }
+    </style>
   </head>
   <body>
+    <div id="title">
+    <h1>Welcome! :D</h1>
+    </div>
     <p>hi :3</p>
   </body>
 </html>        
