--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chillcraft">
     
+    <link rel="stylesheet" href="model.css">
+    
     <style>
     #title {
       font-family: "Brush Script MT", "Lucida Handwriting", Georgia;
