--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       text-align: center;
     }
     </style>
+    
   </head>
   <body>
     <div id="title">
-    <h1>Welcome! :D</h1>
+    <img src="titleimage.png">
+    <h1>Welcome!</h1>
     </div>
     <p>hi :3</p>
   </body>
