--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     
     <style>
     #title {
-      font-family: "Brush Script MT", "Lucida Handwriting", Georgia;
       text-align: center;
+    }
+    #centeredtext {
+      font-family: cursive;
+      position: absolute;
+      top: 13%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 60px;
     }
     </style>
     
@@ -19,7 +26,7 @@
   <body>
     <div id="title">
     <img src="titleimage.png">
-    <h1>Welcome!</h1>
+    <h1 id="centeredtext">Welcome!</h1>
     </div>
     <p>hi :3</p>
   </body>
